add logging with pino, pinohttp and pinopretty

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     // For nodejs:
     "lib": ["esnext"],
     "types": ["node"],
+    "esModuleInterop": true,
     // and npm install -D @types/node
 
     // Other Outputs
